# aws-msk-example

./: .gitignore  README.md  consumer.ipynb  kafka-ui-config-dev.yaml  kafka-ui-config-prod.yaml  kafka-ui-dockerfile.txt  producer.ipynb  pyproject.toml
